# npm-compromise-scan

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yaml  tag-on-merge.yaml
src/: main.rs
